--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ config.py
 
 # Add Additional files
 API_practice.ipynb
-random_number.ipynb
+random_numbers.ipynb
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
